Adds border for testing, sets textarea height to be window size

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,6 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body id="root">
-    <textarea class="textarea">
-      Write!
-    </textarea>
+    <textarea class="textarea" placeholder="Write!" autofocus></textarea>
   </body>
 </html>
