add word counter

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Tororu</title>
-    <link rel="stylesheet" href="index.css" />
-  </head>
-  <body id="root">
-    <textarea class="textarea" placeholder="Write!" autofocus></textarea>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <title>(Tororu v0.0.1) トロール </title>
+  <link rel="stylesheet" href="index.css" />
+</head>
+
+<body id="root">
+  <span id="wordCounter">Words - 0</span>
+  <textarea class="textarea" id="textarea" placeholder="Write!"></textarea>
+</body>
+
+<script src="./lib/wordCounter.js" defer></script>
 </html>
